crear funcion para crear tarea

--- a/clase6/tareas.json
+++ b/clase6/tareas.json
@@ -10,5 +10,17 @@
     {
         "titulo": "Break",
         "estado": "pendiente"
+    },
+    {
+        "titulo": "Titulo de la tarea",
+        "estado": "pendiente"
+    },
+    {
+        "titulo": "Titulo de la tarea 2",
+        "estado": "pendiente"
+    },
+    {
+        "titulo": "Titulo de la tarea 3",
+        "estado": "pendiente"
     }
 ]
